EHC-435 : Use StringBuilder instead of StringBuffer, and switch to valueOf instead of new for Long and Integer EHC-513 : Make cache name persistent across serialization in Statistics class
git-svn-id: http://svn.terracotta.org/svn/ehcache@1480 b9324663-ca0f-0410-8574-be9b3887307d