@@ -115,7 +115,7 @@ public class StopWatch {
 //            String name = names[i];
 //            Ehcache cache = singletonManager.getCache(name);
 //            for (int j = 0; i < 100; i++) {
-//                cache.put(new Element(new Integer(j), "value"));
+//                cache.put(new Element(Integer.valueOf(j), "value"));
 //            }
 //        }
 //        long start = System.currentTimeMillis();
@@ -126,7 +126,7 @@ public class StopWatch {
 //                for (int j = 0; i < 100; i++) {
 //                    Element element = cache.get(name + j);
 //                    if ((element == null)) {
-//                        cache.put(new Element(new Integer(j), "value"));
+//                        cache.put(new Element(Integer.valueOf(j), "value"));
 //                    }
 //                }
 //            }
