@@ -165,13 +165,13 @@ public class ManagementServiceTest extends AbstractCacheTest {
         ManagementService.registerMBeans(manager, mBeanServer, false, false, false, true);
         Ehcache cache = manager.getCache("sampleCache1");
         ObjectName name = CacheStatistics.createObjectName(manager.getName(), cache.getName());
-        assertEquals(new Long(0), mBeanServer.getAttribute(name, "ObjectCount"));
+        assertEquals(Long.valueOf(0), mBeanServer.getAttribute(name, "ObjectCount"));
         cache.put(new Element("1", "value"));
         cache.get("1");
         Thread.sleep(20);
-        assertEquals(new Long(1), mBeanServer.getAttribute(name, "ObjectCount"));
-        assertEquals(new Long(1), mBeanServer.getAttribute(name, "MemoryStoreObjectCount"));
-        assertEquals(new Long(0), mBeanServer.getAttribute(name, "DiskStoreObjectCount"));
+        assertEquals(Long.valueOf(1), mBeanServer.getAttribute(name, "ObjectCount"));
+        assertEquals(Long.valueOf(1), mBeanServer.getAttribute(name, "MemoryStoreObjectCount"));
+        assertEquals(Long.valueOf(0), mBeanServer.getAttribute(name, "DiskStoreObjectCount"));
 
 //        Thread.sleep(1000000);
 
